# Open-Street-Works-Data-Pipeline

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  makefile  next_steps.md  prep_and_push.py  pyproject.toml  requirements.txt
.github/workflows/: pytests.yml  ruff.yml  safeguards.yml
analytics_erds/: street_works_analysis.dbml
dbt/street_manager_street_works_analysis/: README.md  dbt_project.yml  profiles.yml  run_dbt_collab_24_25.sh  run_dbt_jobs.sh
diagrams_as_code/: README.md  scottish_data.py  street_work_importance.py
practice/: README.md  swa_gss_rdls.py
src/: README.md  historic_main.py  historic_permit_main.py  main.py  monthly_main.py  monthly_permit_main.py  os_open_usrns_main.py  scot_historic_permit_main.py  test_pydantic_model.py
src/auth/: get_credentials.py
src/data_processors/: arrow_stream.py  geoplace_swa.py  os_open_usrn.py  os_usrn_uprn.py  street_manager.py
src/data_sources/: data_source_config.py  geoplace_swa.py  os_open_usrn.py  os_usrn_uprn.py  street_manager.py
src/database/: database_config.py  motherduck.py
src/dft_data/: dft_data.py
src/diagrams_as_code/: README.md  scottish_data.py
src/england_street_manager/: date_month.py  extract_load_data.py  flatten_street_manager_data.py  generate_dl_link.py  historic_main_links.py  motherduck_create_table.py  schema_name_trigger.py  stream_zipped_data.py
src/functions/: date_month.py  extract_load_data.py  generate_dl_link.py  get_creds.py  historic_main_links.py  motherduck_connection.py  motherduck_create_table.py
src/general_functions/: create_motherduck_connection.py  create_table_names.py  get_credentials.py
src/geoplace_swa_codes/: create_table_name.py  fetch_swa_codes.py  load_swa_codes.py
src/os_open_linked_ids/: create_motherduck_table.py  get_redirect_url.py  os_open_linked_ids_processor.py  process_into_motherduck.py
src/os_open_linked_ids_uprns_usrns/: process_into_motherduck.py
src/os_open_roads/: create_motherduck_table.py  get_redirect_url.py  os_open_roads_processor.py  process_into_motherduck.py
src/os_open_usrn/: README.md  create_motherduck_table.py  (+3 more)
terraform/: README.md  main.tf
tests/: README.md  motherduck_manager.py  test_motherduck_manager.py
unit_tests/: README.md  test_col_rename.py  test_pydantic_model.py  test_raw_schema_trigger.py  test_street_manager_flatten_json.py
(+133 files in other folders)
