[tool.poetry]
name = "dft-street-manager-pipeline"
version = "0.1.0"
description = ""
authors = ["christophercarlon <cmcarleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
duckdb = "0.9.2"
tqdm = "^4.66.2"
stream-unzip = "^0.0.91"
loguru = "^0.7.2"
psutil = "^5.9.8"
pyarrow = "^15.0.2"
boto3 = "^1.34.77"
pyspark = "^3.5.1"
memory-profiler = "^0.61.0"
ruff = "^0.3.7"
pydantic = "^2.7.0"
playwright = "^1.43.0"
idna = "^3.7"
requests = "^2.31.0"
diagrams = "^0.23.4"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
