[tool.poetry]
name = "Open-Street-Works-Data-Pipeline"
version = "0.1.0"
description = ""
authors = ["christophercarlon <cmcarleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
duckdb = "1.1.3"
tqdm = "^4.66.2"
stream-unzip = "^0.0.91"
loguru = "^0.7.2"
psutil = "^5.9.8"
pyarrow = "^15.0.2"
boto3 = "^1.34.77"
memory-profiler = "^0.61.0"
ruff = "^0.3.7"
pydantic = "^2.7.0"
idna = "^3.7"
requests = "^2.31.0"
diagrams = "^0.23.4"
graphviz = "^0.20.3"
python-dotenv = "^1.0.1"
pytest = "^8.2.1"
geopandas = "^0.14.4"
httpx = "^0.27.0"
pyogrio = "^0.8.0"
pytest-cov = "^5.0.0"
xlrd = "^2.0.1"
polars = "^1.4.1"
fastexcel = "^0.11.5"
msoffcrypto-tool = "^5.4.1"
beautifulsoup4 = "^4.12.3"
odfpy = "^1.4.1"
dbt-duckdb = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
